--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Luck of the irish!</title>
+	<script src="jquery.min.js" type="text/javascript"></script>
 	<script src="main.js" type="text/javascript"></script>
 </head>
 <body>
